# ourocode

./: 404.html  A1_MEF_to_save.py  CHANGELOG.md  EC1_Vent.py  EC5_BLC.py  EC8_Sismique.py  LICENSE  MANIFEST.in  Matrice de rigidité K ele_inv - Copie.xlsx  Matrice de rigidité K ele_inv.xlsx  Matrice de rigidité K.csv  Matrice de rigidité K.xlsx  Matrice de rigidité Kverif.xlsx  Modele_NdC.ipynb  Ourocode.xmind  README.md  bars_infos.json  bars_infos_ok.json  coverage.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml  test.ipynb  test2.py  test_assemblage.html  test_assemblage.ipynb  test_poteau_ass_meca.ipynb  test_poutre_assemblee_meca.html  test_poutre_assemblee_meca.ipynb  test_poutre_assemblee_meca.py  vérifMEF.xlsx
.github/workflows/: ci.yml  coverage.yml  pypi.yml  release.yml
.windsurf/: agents.md
OUREA-EasyCode/eurocode/: EC0_Combinaison.py  EC1_Vent.py  EC3_Element_droit.py  test.py
Test/: test_EC5_Element_droit.py
api/A0_Projet/: index.html
api/EC0_Combinaison/: index.html
api/EC1_Exploitation/: index.html
api/EC1_Neige/: index.html
api/EC1_Vent/: index.html
api/EC3_Assemblage/: index.html
api/EC3_Element_droit/: index.html
api/EC3_Feu/: index.html
api/EC5_Assemblage/: index.html
api/EC5_BLC/: index.html
api/EC5_CVT/: index.html
api/EC5_Element_droit/: index.html
api/EC5_Feu/: index.html
api/EC8_Sismique/: index.html
api/objet/: index.html
catalog/data/: caracteristique_meca_acier.csv  caracteristique_meca_bois.csv  coeff_psy.csv  limite_fleche.csv  qualite_acier.csv  zone_neige.csv
catalog/eurocode/: A0_Projet.py  A1_MEF.py  EC0_Combinaison.py  EC1_Exploitation.py  EC1_Neige.py  EC1_Vent.py  EC3_Assemblage.py  EC3_Element_droit.py  EC5_Assemblage.py  EC5_BLC.py  EC5_Element_droit.py  logical.py  objet.py
changelog/: index.html
data/: caracteristique_meca_acier.csv  caracteristique_meca_bois.csv  coeff_psy.csv  gammaM.csv  kdef.csv  kmod.csv  qualite_acier.csv  section_boulon.csv  val_limite_fleche.csv  vent_CPE_mur_verticaux.csv  zone_neige.csv  zone_vent.csv
data/vent/: zone_vent.csv
docs/: guide.md  index.md  normes.md
docs/api/: A0_Projet.md  EC0_Combinaison.md  EC1_Exploitation.md  EC1_Neige.md  EC1_Vent.md  EC3_Assemblage.md  EC3_Element_droit.md  EC3_Feu.md  EC5_Assemblage.md  EC5_BLC.md  EC5_CVT.md  EC5_Element_droit.md  EC5_Feu.md  EC8_Sismique.md  objet.md
eurocode/: A0_Projet.py  EC0_Combinaison.py  EC1_Actions.py  EC1_Neige.py  EC1_Vent.py  EC3_Assemblage.py  EC3_Element_droit.py  EC5_Assemblage.py  EC5_BLC.py  EC5_Element_droit.py  objet.py
exemple/: Exemple.html  Exemple.ipynb
guide/: index.html
normes/: index.html
ourocode/: __init__.py  __version__.py
ourocode/data/: caracteristique_meca_beton.csv  carte_action_region.csv
ourocode/eurocode/: A0_Projet.py  A0_Projet_to_save.py  A1_MEF.py  EC0_Combinaison.py  EC1_Exploitation.py  EC1_Neige.py  EC1_Vent.py  EC3_Assemblage.py  EC3_Element_droit.py  EC3_Feu.py  EC5_Assemblage.py  EC5_BLC.py  EC5_CVT.py  EC5_Element_droit.py  EC5_Feu.py  EC8_Sismique.py  __init__.py  logical.py  objet.py  test.py
ourocode/prdata/: property_mat_ass.json
search/: search_index.json
tests/: test_A0_Projet.py  test_EC0_Combinaison.py  test_EC1_Exploitation.py  test_EC1_Neige.py  test_EC3_Assemblage.py  test_EC3_Element_droit.py  test_EC3_Feu.py  test_EC3_Platine.py  test_EC5_Assemblage.py  test_EC5_BLC.py  test_EC5_CVT.py  test_EC5_Element_droit.py  test_EC5_Embrevement.py  test_EC5_Feu.py  test_EC5_Verification.py  test_EC8_Sismique.py  test_model_generator.py
(+57 files in other folders)
