[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ourocode*"]

[project]
name = "ourocode"
version = "2.1.2"
description = "Ceci est un catalogue de fonction permettant une utilisation rapide pour la réalisation de note de calcul personnalisée."
readme = "README.md"
authors = [{name = "Anthony PARISOT", email = "contact@ourea-structure.fr"}]
license = "Apache-2.0"
license-files = ["LICEN[CS]E"]
dependencies = [
    "forallpeople",
    "pandas",
    "Pillow",
    "matplotlib",
    "pyvista[all,trame]",
    "PyNiteFEA",
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AnthonyPrst/ourocode"

[project.optional-dependencies]
gui = [
    "PySide6",
]
full = [
    "ourocode[gui,mef]",
]
dev = [
    "black",
]
test = [
    "pytest",
    "pytest-cov",
    "coverage",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-include-markdown-plugin>=6.0",
    "mike>=2.0",
]

[tool.ruff]
line-length = 120
exclude = ["*.ipynb"]

[tool.ruff.lint]
ignore = [
    "E402",   # Module level import not at top — intentionnel (si.environment() avant imports)
    "F401",   # Imported but unused — faux positifs sur les __init__.py de réexport
    "F403",   # from module import * — utilisé intentionnellement
    "F405",   # May be undefined from star import — conséquence de F403
    "E741",   # Ambiguous variable name (l, O, I) — noms de variables physiques courants
    "F841",   # Local variable assigned but never used
]
